tests/machine/x/fortran/string_in_operator.f90
program main
  implicit none
  s = "catch"
  print *, ("cat" in s)
  print *, ("dog" in s)
end program main
